V4.0.1 Bug fixes from Json migration and some drag-to-reorder quirks. Fixed a typo, compiling new Mods would use thewrong key for the manifest Files. (It still used the toString(), instead of .key)
Fixed: Is now ACTUALLY abale to read Windows compiled manifests in Linux! Path.normalise() does NOT normalise path seperators like online sources claim it does!

In the GUI, ModManager page loads mods in the correct load order when opened.
ModManager.getAllMods() was default-ordering, now it uses the GameState when applicable.
Games with no Mods don't stack infinte getAllMods calls when there are no mods. Now, the loading divider will disapear and stop after the first check returns and empty list.
NOTE: AllMods.isEmpty means no mods where found but iut was checked. AsllMods == null means the mods must be re-fetched.

Dragging Mods now works cleaner and allows dragging mods to the top and bottom regardless of whether your dragging top-down or down-up.

Replaced all Paths.get() calls with the newer Path.of() as it is listed to become depreciated.